[tool.poetry]
name = "bi-comms-plotly-map"
version = "0.0.1"
description = "Template (and research) for a plotly map with bidirectoinal communication with streamlit."
authors = ["ejwillemse <ejwillemse@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/bi_comms_plotly_map"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.16.0"
plotly = "^5.11.0"
streamlit-plotly-mapboxEvents = "^0.0.4"
pylint = "^2.15.9"
black = "^22.12.0"
watchdog = "^2.2.0"
streamlit-plotly-events = "^0.0.6"
streamlit-aggrid = "^0.3.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
